--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/retail3210/vscode-theme-atom"
   },
   "engines": {
-    "atom": ">0.50.0"
+    "atom": ">=0.200.0"
   },
   "homepage": "https://github.com/retail3210/vscode-theme-atom"
 }
