Updated package.json (2)

--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
   "version": "0.1.0",
   "description": "Visual Studio Code Theme for Atom Editor",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/retail3210/vscode-theme-atom"
-  },
+  "repository": "https://github.com/retail3210/vscode-theme-atom",
   "engines": {
     "atom": ">=0.200.0"
-  },
-  "homepage": "https://github.com/retail3210/vscode-theme-atom"
+  }
 }
