--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Visual Studio Code",
+  "name": "visual-studio-code",
   "author": "retail3210",
   "theme": "ui",
   "version": "0.1.0",
   "description": "Visual Studio Code Theme for Atom Editor",
   "license": "MIT",
-  "repository": "https://github.com/therne/vscode-theme-atom",
+  "repository": "https://github.com/retail3210/vscode-theme-atom",
   "engines": {
     "atom": ">=0.200.0"
   }
